# socialmedia-analytics

./: .gitignore  ACCOUNT_MANAGEMENT.md  README.md  accounts.json  analyze_all_accounts.py  app.py  app_production.py  cli.py  pyproject.toml  requirements.txt  test_dashboard.py
.streamlit/: config.toml  secrets.toml  secrets.toml.example
src/: config.py  data_io.py  ingest.py  metrics.py  report_generator.py  transform.py
src/analytics/: base.py  instagram.py  tiktok.py
src/utils/: error_handler.py  helpers.py  validators.py
